Refactoring in both profiles and add 5th video

--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -176,322 +176,96 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_profile_description" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="105dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="11dp"
-            android:id="@+id/fragment_profile_container1"
-            app:cardBackgroundColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_tv"
-            app:layout_constraintStart_toStartOf="parent"
-            app:cardCornerRadius="9dp"
-            app:layout_constraintEnd_toStartOf="@id/fragment_profile_container2">
-
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_tv">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/video_background">
+                android:layout_height="match_parent">
 
-                <View
-                    android:id="@+id/fragment_profile_settings1"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:background="@drawable/three_points"
-                    android:elevation="10dp"
-                    android:visibility="invisible"
+                <com.avatar.ava.presentation.main.videoCardView.VideoCardView
+                    android:layout_width="0dp"
+                    android:layout_height="105dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="11dp"
+                    android:id="@+id/fragment_profile_video_card_view_1"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/fragment_profile_video_card_view_2"/>
+
+
+
+                <com.avatar.ava.presentation.main.videoCardView.VideoCardView
+                    android:layout_width="0dp"
+                    android:layout_height="105dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginStart="11dp"
+
+                    app:cardCornerRadius="9dp"
+                    android:id="@+id/fragment_profile_video_card_view_2"
+                    app:cardBackgroundColor="@color/black"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/fragment_profile_video_1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/black"
-                    android:visibility="gone"
-
-
+                    app:layout_constraintStart_toEndOf="@+id/fragment_profile_video_card_view_1"
                     />
 
-                <ImageView
-                    android:id="@+id/fragment_profile_add_icon1"
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
-                    android:background="@drawable/plus_icon"
-                    android:clickable="false"
-                    android:contentDescription="@string/add"
+
+
+                <com.avatar.ava.presentation.main.videoCardView.VideoCardView
+                    android:id="@+id/fragment_profile_video_card_view_3"
+                    android:layout_width="0dp"
+                    android:layout_height="105dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginBottom="11dp"
+
+                    app:cardBackgroundColor="@color/black"
+                    app:cardCornerRadius="9dp"
+                    app:layout_constraintVertical_bias="0.0"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/fragment_profile_video_card_view_1"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/fragment_profile_add_video_btn_1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/none_color"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/fragment_profile_in_casting_1"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:background="@color/dialogBackground"
-                    android:gravity="center"
-                    android:text=""
-                    android:textColor="@color/white"
-                    android:textSize="12sp"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.cardview.widget.CardView>
-
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="105dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="11dp"
-            android:layout_marginStart="11dp"
-            android:visibility="invisible"
-            app:cardCornerRadius="9dp"
-            android:id="@+id/fragment_profile_container2"
-            app:cardBackgroundColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_tv"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/fragment_profile_container1">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/video_background">
-
-                <View
-                    android:id="@+id/fragment_profile_settings2"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:background="@drawable/three_points"
-                    android:elevation="10dp"
-                    android:visibility="invisible"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/fragment_profile_video_2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="gone"
-
+                    app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_card_view_1"
                     />
 
-                <ImageView
-                    android:id="@+id/fragment_profile_add_icon2"
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
-                    android:background="@drawable/plus_icon"
-                    android:clickable="false"
-                    android:contentDescription="@string/add"
+
+
+                <com.avatar.ava.presentation.main.videoCardView.VideoCardView
+                    android:id="@+id/fragment_profile_video_card_view_4"
+                    android:layout_width="0dp"
+                    android:layout_height="105dp"
+                    android:layout_marginStart="11dp"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="11dp"
+
+                    app:cardBackgroundColor="@color/black"
+                    app:cardCornerRadius="9dp"
+                    app:layout_constraintVertical_bias="0.0"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/fragment_profile_video_card_view_3"
+                    app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_card_view_2"/>
+
+
+                <com.avatar.ava.presentation.main.videoCardView.VideoCardView
+                    android:layout_width="0dp"
+                    android:layout_height="105dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="11dp"
+                    android:id="@+id/fragment_profile_video_card_view_5"
+                    app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_card_view_3"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/fragment_profile_add_video_btn_2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/none_color"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/fragment_profile_in_casting_2"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:background="@color/dialogBackground"
-                    android:gravity="center"
-                    android:text=""
-                    android:textColor="@color/white"
-                    android:textSize="12sp"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent" />
-
+                    app:layout_constraintEnd_toEndOf="@id/fragment_profile_video_card_view_1"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.cardview.widget.CardView>
-
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/fragment_profile_container3"
-            android:layout_width="0dp"
-            android:layout_height="105dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="11dp"
-            android:layout_marginBottom="11dp"
-            android:visibility="invisible"
-            app:cardBackgroundColor="@color/black"
-            app:cardCornerRadius="9dp"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/fragment_profile_container4"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_profile_container1">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/video_background">
-
-                <View
-                    android:id="@+id/fragment_profile_settings3"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:background="@drawable/three_points"
-                    android:elevation="10dp"
-                    android:visibility="invisible"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/fragment_profile_video_3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="gone"
-
-                    />
-
-                <ImageView
-                    android:id="@+id/fragment_profile_add_icon3"
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
-                    android:background="@drawable/plus_icon"
-                    android:clickable="false"
-                    android:contentDescription="@string/add"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/fragment_profile_add_video_btn_3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/none_color"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/fragment_profile_in_casting_3"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:background="@color/dialogBackground"
-                    android:gravity="center"
-                    android:text=""
-                    android:textColor="@color/white"
-                    android:textSize="12sp"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.cardview.widget.CardView>
+        </ScrollView>
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/fragment_profile_container4"
-            android:layout_width="0dp"
-            android:layout_height="105dp"
-            android:layout_marginStart="11dp"
-            android:layout_marginTop="11dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="11dp"
-            android:visibility="invisible"
-            app:cardBackgroundColor="@color/black"
-            app:cardCornerRadius="9dp"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/fragment_profile_container3"
-            app:layout_constraintTop_toBottomOf="@id/fragment_profile_container2">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/video_background">
 
-                <View
-                    android:id="@+id/fragment_profile_settings4"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:background="@drawable/three_points"
-                    android:elevation="10dp"
-                    android:visibility="invisible"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/fragment_profile_video_4"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="gone"
-
-                    />
-
-                <ImageView
-                    android:id="@+id/fragment_profile_add_icon4"
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
-                    android:background="@drawable/plus_icon"
-                    android:clickable="false"
-                    android:contentDescription="@string/add"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/fragment_profile_add_video_btn_4"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/none_color"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/fragment_profile_in_casting_4"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:background="@color/dialogBackground"
-                    android:gravity="center"
-                    android:text=""
-                    android:textColor="@color/white"
-                    android:textSize="12sp"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
