--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -133,7 +133,7 @@
 
         <TextView
             android:id="@+id/fragment_profile_text2"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/description"
             android:textColor="@color/white"
@@ -143,21 +143,69 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintTop_toBottomOf="@id/fragment_profile_text1"
             app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <ImageView
+            android:id="@+id/fragment_profile_inst"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:src="@drawable/instagram_icon"
+            android:layout_marginEnd="80dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/fragment_profile_text2"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_profile_text2"
+            />
+
+        <TextView
+            android:id="@+id/fragment_profile_inst_name_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Instagram @"
+            android:textCursorDrawable="@color/white"
+            android:textColorHint="@color/white"
+            android:textColor="@color/darkGrayText"
+            android:textSize="15sp"
+            android:visibility="visible"
+            android:layout_marginStart="40dp"
+            app:layout_constraintTop_toTopOf="@id/fragment_profile_text2"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_profile_text2"
+            app:layout_constraintStart_toEndOf="@+id/fragment_profile_text2"
             />
 
         <EditText
-            android:id="@+id/fragment_profile_description"
+            android:id="@+id/fragment_profile_inst_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
             android:layout_marginEnd="16dp"
+            android:gravity="start"
             android:importantForAutofill="no"
             android:inputType="text"
             android:textCursorDrawable="@color/white"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
             android:textSize="15sp"
+            android:visibility="visible"
+            android:background="@drawable/profile_field_edit_back"
+            app:layout_constraintTop_toTopOf="@id/fragment_profile_text2"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_profile_text2"
+            app:layout_constraintStart_toEndOf="@+id/fragment_profile_inst_name_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <EditText
+            android:id="@+id/fragment_profile_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="2dp"
+            android:importantForAutofill="no"
+            android:inputType="textMultiLine"
+            android:textCursorDrawable="@color/white"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:autoLink="web"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_profile_text2" />
@@ -176,13 +224,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_profile_description" />
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_tv">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_tv">
 
                 <com.avatar.ava.presentation.main.videoCardView.VideoCardView
                     android:layout_width="0dp"
@@ -260,7 +306,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="@id/fragment_profile_video_card_view_1"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </ScrollView>
 
 
 
