--- a/TalentShow/app/src/main/res/layout/fragment_casting.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_casting.xml
@@ -82,7 +82,8 @@
         android:id="@+id/casting_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/cardview_dark_background"
+        android:background="@drawable/loading_back"
+        android:elevation="100dp"
         android:visibility="invisible"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,6 +94,7 @@
             android:id="@+id/casting_loading_progbar"
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -103,6 +105,8 @@
             android:text="@string/wait_loading"
             android:textColor="@color/white"
             android:textSize="18sp"
+            android:gravity="center"
+            android:layout_margin="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/casting_loading_progbar"/>
