--- a/TalentShow/app/src/main/res/layout-ldpi/fragment_registration.xml
+++ b/TalentShow/app/src/main/res/layout-ldpi/fragment_registration.xml
@@ -260,7 +260,7 @@
         android:background="@drawable/buttons_background"
         android:textSize="14sp"
         android:gravity="center"
-        android:text="@string/to_sign_in"
+        android:text="@string/sign_up"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
