--- a/TalentShow/app/src/main/res/layout/share_bottomsheet.xml
+++ b/TalentShow/app/src/main/res/layout/share_bottomsheet.xml
@@ -19,7 +19,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/inst_icon"
+            android:background="@drawable/instagram_icon"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
