--- a/TalentShow/app/src/main/res/layout-ldpi/fragment_registration.xml
+++ b/TalentShow/app/src/main/res/layout-ldpi/fragment_registration.xml
@@ -267,5 +267,28 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_registration_text1"/>
 
+    <CheckBox
+        android:id="@+id/fragment_registration_consent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_reg_continue"
+
+        />
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Я согласен на рассылку по почте"
+        android:gravity="center"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toStartOf="@+id/fragment_registration_consent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/fragment_registration_consent"
+        app:layout_constraintBottom_toBottomOf="@id/fragment_registration_consent"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
