--- a/TalentShow/app/src/main/res/layout/rating_recycler_semifinalists_item.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_semifinalists_item.xml
@@ -26,6 +26,19 @@
         />
 
     <TextView
+        android:id="@+id/rating_recycler_semifinalists_likes_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/gradient_icon_bg"
+        android:textColor="@color/white"
+        android:gravity="end"
+        android:layout_marginEnd="5dp"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@+id/rating_recycler_semifinalists_ava_item_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <TextView
         android:id="@+id/rating_recycler_semifinalists_name_item"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
