--- a/TalentShow/app/src/main/res/layout/fragment_semifinalists.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_semifinalists.xml
@@ -1,14 +1,280 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".presentation.main.fragments.semifinalists.SemifinalistsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_semifinalists_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/fragment_semifinalists_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="02 : 03 : 21"
+        android:textColor="@color/white"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_semifinalists_list" />
+
+    <TextView
+        android:id="@+id/fragment_semifinalists_days"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="дн."
+        android:gravity="top"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/fragment_semifinalists_time"
+        app:layout_constraintStart_toStartOf="@+id/fragment_semifinalists_time"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="top"
+        android:text="ч."
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toStartOf="@+id/fragment_semifinalists_minutes"
+        app:layout_constraintStart_toEndOf="@+id/fragment_semifinalists_days"
+        app:layout_constraintTop_toBottomOf="@id/fragment_semifinalists_time" />
+
+    <TextView
+        android:id="@+id/fragment_semifinalists_minutes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="мин."
+        android:gravity="top"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/fragment_semifinalists_time"
+        app:layout_constraintEnd_toEndOf="@+id/fragment_semifinalists_time"
+        />
+
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="320dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="2dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_semifinalists_days">
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.google.android.exoplayer2.ui.PlayerView
+                android:id="@+id/rating_item_video"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:controller_layout_id="@layout/exo_playback_control_view"
+                app:resize_mode="zoom">
+
+                <ImageView
+                    android:id="@+id/rating_item_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop" />
+            </com.google.android.exoplayer2.ui.PlayerView>
+
+            <TextView
+                android:id="@+id/rating_item_pos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:lineSpacingExtra="1sp"
+                android:textSize="24sp"
+                android:textColor="@color/white"
+                android:elevation="20dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+
+
+            <View
+                android:id="@+id/rating_item_restart"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:visibility="invisible"
+                android:background="@drawable/casting_fragment_restart"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <ProgressBar
+                android:id="@+id/rating_item_progressbar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:visibility="invisible"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <ImageButton
+                android:id="@+id/rating_item_start"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/dark_circle_shape"
+                style="@style/ExoMediaButton.Play"
+                android:elevation="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:paddingTop="200dp"
+                android:elevation="10dp"
+                android:background="@drawable/casting_bottom_gradient"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <ImageView
+                    android:id="@+id/rating_item_ava_back"
+                    android:layout_width="31dp"
+                    android:layout_height="31dp"
+                    android:elevation="-1dp"
+                    android:background="@drawable/blue_circle"
+                    app:layout_constraintBottom_toBottomOf="@+id/rating_item_ava"
+                    app:layout_constraintEnd_toEndOf="@+id/rating_item_ava"
+                    app:layout_constraintStart_toStartOf="@+id/rating_item_ava"
+                    app:layout_constraintTop_toTopOf="@+id/rating_item_ava" />
+
+                <ImageView
+                    android:id="@+id/rating_item_ava"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="310dp"
+                    android:elevation="1dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/rating_item_description" />
+
+                <TextView
+                    android:id="@+id/rating_item_likes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="2dp"
+                    android:gravity="center"
+                    android:lineSpacingExtra="1sp"
+                    android:textColor="@color/white"
+                    app:layout_constraintStart_toEndOf="@+id/rating_item_heart_icon"
+                    app:layout_constraintBottom_toBottomOf="@+id/rating_item_heart_icon"
+                    app:layout_constraintTop_toTopOf="@+id/rating_item_heart_icon"/>
+
+
+
+                <ImageView
+                    android:id="@+id/rating_item_heart_icon"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:src="@drawable/like"
+                    android:layout_marginTop="270dp"
+                    android:layout_marginStart="16dp"
+                    tools:ignore="ContentDescription"
+                    android:layout_marginBottom="12dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/rating_item_ava"/>
+
+                <TextView
+                    android:id="@+id/rating_item_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:lineSpacingExtra="1sp"
+                    android:text="@string/activity_casting_name"
+                    android:textColor="@color/white"
+                    android:layout_marginStart="6dp"
+                    app:layout_constraintStart_toEndOf="@+id/rating_item_ava"
+                    app:layout_constraintTop_toTopOf="@+id/rating_item_ava"
+                    app:layout_constraintBottom_toBottomOf="@+id/rating_item_ava"
+                    />
+
+                <TextView
+                    android:id="@+id/rating_item_description"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="0dp"
+                    android:paddingBottom="14dp"
+                    android:paddingTop="8dp"
+                    android:lineSpacingExtra="2sp"
+                    android:maxLines="3"
+                    android:text="Это описание к видео, которое написал автор, чтобы было понятно, что он хочет сказать своим творчеством. Наверное, тут очень ограничен обхем текста."
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/rating_item_ava" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="В полуфинал проходят только двое участника\nВыбери кто это будет"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+    <View
+        android:id="@+id/btn_like"
+        android:layout_width="43dp"
+        android:layout_height="40dp"
+        android:background="@drawable/like"
+        android:elevation="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        android:text="Выбрано 0 талантов"
+        android:textColor="@color/grayText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_like" />
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
