--- a/TalentShow/app/src/main/res/menu/menu_bottom_nav_bar.xml
+++ b/TalentShow/app/src/main/res/menu/menu_bottom_nav_bar.xml
@@ -6,11 +6,6 @@
         android:title="@string/notifications"
         android:icon="@drawable/ic_notifications_black_24dp"/>
 
-    <item
-        android:id="@+id/nav_casting"
-        android:icon="@drawable/casting_heart_icon"
-        android:title="@string/casting"/>
-
 
     <item
         android:id="@+id/nav_rating"
@@ -18,7 +13,19 @@
         android:title="@string/rating"/>
 
     <item
+        android:id="@+id/nav_casting"
+        android:icon="@drawable/casting_heart_icon"
+        android:title="@string/casting"/>
+
+    <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/person_not_pressed"
         android:title="@string/profile"/>
+
+    <item
+        android:id="@+id/nav_semifinalists"
+        android:icon="@drawable/ic_thunder"
+        android:title="@string/semifinalists"/>
+
+
 </menu>
