--- a/TalentShow/app/src/main/res/layout/fragment_semifinalists.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_semifinalists.xml
@@ -66,7 +66,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="320dp"
+        android:layout_height="360dp"
         android:layout_marginStart="6dp"
         android:layout_marginEnd="6dp"
         app:cardUseCompatPadding="true"
@@ -141,6 +141,7 @@
                 android:background="@drawable/dark_circle_shape"
                 style="@style/ExoMediaButton.Play"
                 android:elevation="20dp"
+                android:visibility="invisible"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -239,17 +240,6 @@
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="В полуфинал проходят только двое участника\nВыбери кто это будет"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <View
         android:id="@+id/btn_like"
@@ -260,7 +250,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <TextView
         android:id="@+id/textView3"
