--- a/TalentShow/app/src/main/res/menu/menu_bottom_nav_bar.xml
+++ b/TalentShow/app/src/main/res/menu/menu_bottom_nav_bar.xml
@@ -3,29 +3,26 @@
 
     <item
         android:id="@+id/nav_notify"
-        android:title="@string/notifications"
+        android:title="@string/empty"
         android:icon="@drawable/ic_notifications_black_24dp"/>
 
     <item
         android:id="@+id/nav_casting"
         android:icon="@drawable/casting_heart_icon"
-        android:title="@string/casting"/>
+        android:title="@string/empty"/>
 
     <item
         android:id="@+id/nav_semifinalists"
         android:icon="@drawable/ic_thunder"
-        android:title="@string/semifinalists"/>
+        android:title="@string/empty"/>
 
     <item
         android:id="@+id/nav_rating"
         android:icon="@drawable/star"
-        android:title="@string/rating"/>
-
+        android:title="@string/empty"/>
 
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/person_not_pressed"
-        android:title="@string/profile"/>
-
-
+        android:title="@string/empty"/>
 </menu>
